--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -24,8 +24,8 @@
             <h3 class="artist-name">{{ playerBar.albumData.artist }}</h3>
             <div class="seek-control">
                 <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.length }}" on-change="playerBar.songPlayer.setCurrentTime(value)"></seek-bar>
-                    <div class="current-time">{{ playerBar.songPlayer.currentTime | timecode }}</div>
-                    <div class="total-time">{{ playerBar.songPlayer.currentSong.length | timecode }}</div>
+                    <div class="current-time">{{ playerBar.songPlayer.currentTime }}</div>
+                    <div class="total-time">{{ playerBar.songPlayer.currentSong.length }}</div>
             </div>
         </div>
 
@@ -33,5 +33,5 @@
             <span class="icon ion-volume-high"></span>
             <seek-bar value="{{ playerBar.songPlayer.volume }}" max="100" on-change="playerBar.songPlayer.setVolume(value)"></seek-bar>
         </div>
-    </div>    
+    </div>
 </section>
