--- a/app/styles/landing.css
+++ b/app/styles/landing.css
@@ -16,7 +16,7 @@ body.landing {
     top: 40%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
-    transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
     width: 100%;
     text-align: center;
     font-size: 4rem;
@@ -31,19 +31,10 @@ body.landing {
 }
 
 .point {
-    opacity: 1
-    /*position: relative;
+    position: relative;
     padding: 2rem;
     text-align: center;
-    -webkit-transform: scaleX(0.9) translateY(3rem);
-    -moz-transform: scaleX(0.9) translateY(3rem);
-    transform: scaleX(0.9) translateY(3rem);
-    -webkit-transition: all 0.25s ease-in-out;
-    -moz-transition: all 0.25s ease-in-out;
-    transition: all 0.25s ease-in-out;
-    -webkit-transition-delay: 0.2s;
-    -moz-transition-delay: 0.2s;
-    transition-delay: 0.2s;*/
+    opacity: 1;
 }
 
 .point .point-title {
