--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -6,6 +6,7 @@
 
 html {
     height: 100%;
+    font-size: 100%
 }
 
 body {
@@ -19,7 +20,7 @@ body {
     min-height: 100%;
     padding-bottom: 200px;
  }
- 
+
 .navbar {
     position: relative;
     padding: 0.5rem;
@@ -79,19 +80,19 @@ body {
 /* Medium and small screens (640px) */
 @media (min-width: 40rem) {
     html { font-size: 112%; }
-    
+
     .column {
         float: left;
         padding-left: 1rem;
         padding-right: 1rem;
     }
-    
+
     .column.full { width: 100%; }
     .column.two-thirds { width: 66.7%; }
     .column.half { width: 50%; }
     .column.third { width: 33.3%; }
     .column.fourth { width: 25%; }
-    .column.flow-opposite { float: right; } 
+    .column.flow-opposite { float: right; }
 }
 
 /* Large screens (1024px) */
